src/tests/ternary-operator/5.txt
ternary-operator/5.c:4:15: error: invalid operands to ternary '?:', alternatives should be of equal type (have 'float' and 'int')
     (1 || 2 ? c[0] : 10);
               ^
